--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,11 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
+  google_fonts: ^0.3.3
+  provider:
+    git:
+      url: https://github.com/rrousselGit/provider.git
+      ref: extensions
 
 dev_dependencies:
   flutter_test:
